# SchrodingerVault

./: DEBUG schrodinger-vault TAURI.txt  LICENSE  package-lock.json
.github/: CODEOWNERS
schrodinger-vault/: package-lock.json  package.json
schrodinger-vault/src/: create.html  create.js  index.html  main.js  styles.css  unlock.html  unlock.js
schrodinger-vault/src-tauri/: Cargo.toml  tauri.conf.json
schrodinger-vault/src-tauri/.cargo/: config.toml
schrodinger-vault/src-tauri/capabilities/: default.json
schrodinger-vault/src-tauri/icons/: icon.icns
schrodinger-vault/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
schrodinger-vault/src-tauri/src/vault_core/: db.rs  mod.rs
