[package]
name = "schrodinger-vault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
opt-level = 3
lto = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
rand = "0.9.2"
rand_core = "0.9"
pbkdf2 = "0.12"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
base64 = "0.22.1"
zeroize = "1.7"
oqs = "0.11.0"
dirs = "6.0.0"
secrecy = "0.10.3"
arboard = "3.4.1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }
aead = "0.5"
tauri-plugin-dialog = "2.4.2"
